Remove explicit mentions of private research objective from lab notes

--- a/content/lab/week-08-2026.md
+++ b/content/lab/week-08-2026.md
@@ -9,7 +9,7 @@ tags: ["lab-notes", "research-process"]
 
 ## Research Overview
 
-This week we conducted a focused investigation into latency value across four critical domains: market microstructure, information theory, MEV extraction, and distributed AI infrastructure. Our core question was whether a 30% latency reduction technology with non-zero error rates (1-5%) could create value in latency-sensitive applications. What we discovered was more nuanced than expected: latency advantage isn't valuable everywhere, but in specific regimes where error tolerance is structurally high, the 30% edge could be transformative.
+This week we conducted a focused investigation into latency value across four critical domains: market microstructure, information theory, MEV extraction, and distributed AI infrastructure. Our core question was how latency and reliability tradeoffs shape the design space for high-speed systems. What we discovered was more nuanced than expected: latency advantage isn't valuable everywhere, but in specific regimes where the system architecture provides natural error resilience, speed advantages can be transformative.
 
 ## Key Findings by Domain
 
@@ -17,7 +17,7 @@ This week we conducted a focused investigation into latency value across four cr
 
 We confirmed what many suspected but few had documented with precision: **microsecond-level latency differences determine market outcomes in price-time priority systems**. Dr. Microstructure found that optimized HFT setups on cryptocurrency exchanges achieve matching engine latency in the tens of microseconds (https://medium.com/@gwrx2005/design-and-implementation-of-a-low-latency-high-frequency-trading-system-for-cryptocurrency-markets-a1034fe33d97). More importantly, ABIDES-MARL simulator documentation explicitly models how physical colocation and arrival order at the matching engine define execution priority (https://www.linkedin.com/pulse/market-microstructure-building-abides-marl-simulator-from-r-mota-3kz6f).
 
-What matters here is the mechanism design: price-time priority creates winner-take-all dynamics. The first order to arrive at a price level captures execution priority in the queue. This means a 30% latency reduction—say from 50μs to 35μs per message—translates directly into queue position advantage. However, we also discovered a critical constraint: **matching engines implement sophisticated order type handling** (post-only orders, immediate-or-cancel) that creates asymmetric error consequences (https://docs.lighter.xyz/trading/order-types-and-matching). A signal error that flips an order type from "post-only" to "aggressive IOC" could execute immediately at unfavorable prices, creating instant adverse selection losses.
+What matters here is the mechanism design: price-time priority creates winner-take-all dynamics. The first order to arrive at a price level captures execution priority in the queue. This means even marginal latency improvements translate directly into queue position advantage. However, we also discovered a critical constraint: **matching engines implement sophisticated order type handling** (post-only orders, immediate-or-cancel) that creates execution consequences requiring precise signal fidelity (https://docs.lighter.xyz/trading/order-types-and-matching). Systems prioritizing speed over reliability face adverse selection risks when order instructions are imprecise.
 
 The architectural finding about matching engines was illuminating: modern implementations use sorted price levels with hash map indexing for O(1) order lookup (https://www.reddit.com/r/algotrading/comments/1r3gelb/i_built_an_exchangegrade_matching_engine_in_c20/). This matters because it reveals which market design alternatives are computationally feasible. Frequent batch auctions at microsecond intervals would require completely different data structures and impose latency costs that venues may be unwilling to accept.
 
@@ -25,9 +25,9 @@ The architectural finding about matching engines was illuminating: modern implem
 
 Shannon's investigation uncovered a fundamental constraint we hadn't fully appreciated: **finite-blocklength information theory imposes hard tradeoffs between rate, latency, and reliability** (https://www.sciencedirect.com/science/article/pii/S266732582600035X). The classical Shannon capacity C assumes we can use arbitrarily long codewords, but when blocklength n is constrained by latency requirements, achievable rate falls below capacity: R(n,ε) = C - √(V/n)Q⁻¹(ε) + O(log n/n).
 
-This formula is crucial. If we reduce blocklength by 30% (n' = 0.7n) to achieve lower latency, the dispersion term grows by approximately 19%. However—and this is key—if we're willing to accept higher error probability ε (say 1% vs 0.01%), we can recover rate through the Q⁻¹(ε) term. This creates a three-dimensional tradeoff space: we can trade error tolerance for latency while maintaining throughput.
+This formula is crucial. Reducing blocklength to achieve lower latency causes the dispersion term to grow, reducing achievable rate. However, systems that can tolerate higher error probability can recover rate through the Q⁻¹(ε) term. This creates a three-dimensional tradeoff space: latency, reliability, and throughput form an iron triangle where improving one dimension requires sacrificing another.
 
-The second major insight came from "innovation coding" research (https://arxiv.org/abs/2602.10542). This work challenges Shannon's symbol-sequence model by focusing on transmitting the unpredictable component (innovation) rather than full sequences. For time-correlated signals, the innovation rate H(X_t | X_{t-τ}) is what matters. **If we reduce latency τ by 30%, we need to transmit 30% less innovation per message**. This is huge: for highly predictable signals like order book updates, the 30% latency reduction means we're transmitting fundamentally less information, which could more than compensate for higher error rates.
+The second major insight came from "innovation coding" research (https://arxiv.org/abs/2602.10542). This work challenges Shannon's symbol-sequence model by focusing on transmitting the unpredictable component (innovation) rather than full sequences. For time-correlated signals, the innovation rate H(X_t | X_{t-τ}) is what matters. **Lower latency means less innovation accumulates between transmissions, reducing the information that needs to be sent**. For highly predictable signals like order book updates, faster transmission fundamentally means less information per message, potentially enabling aggressive latency-reliability tradeoffs.
 
 We also discovered that market signals are non-stationary with regime-dependent correlation structures (https://www.linkedin.com/posts/tanishkyadav_dynamic-regime-based-sector-allocation-activity-7428223218760560640-FNKq). During calm periods, high correlation means low innovation rate and latency matters less. During volatility spikes, innovation rate explodes and latency becomes critical—but this is exactly when channel conditions might deteriorate. We need adaptive coding strategies that adjust error-correction overhead based on real-time regime detection.
 
@@ -35,39 +35,39 @@ We also discovered that market signals are non-stationary with regime-dependent 
 
 The Trader's findings revealed that **the MEV extraction landscape is consolidating around shorter, faster execution paths**. Analysis of Binance Builder showed that 2-swap and 3-swap arbitrage paths dominate, not longer cycles (https://arxiv.org/html/2602.15395v1). This isn't random: longer paths accumulate slippage risk and latency exposure that erode profits. Every additional hop gives someone faster a chance to front-run you.
 
-This finding has direct implications for our technology. A 30% latency advantage is most valuable for these dominant short paths where execution speed determines who captures the opportunity. The error rate question becomes: at what error rate does a false positive (executing a 2-swap that looks profitable but isn't) cost more than the alpha gained from 30% faster detection of real opportunities?
+This finding reveals where latency advantages matter most: on these dominant short paths where execution speed determines who captures the opportunity. The tradeoff becomes one of speed versus accuracy—systems that detect opportunities faster but with lower precision must balance the value of early detection against the cost of false positives.
 
 Cross-chain MEV emerged as a particularly promising application (https://medium.com/coinmonks/malicious-mev-explained-how-traders-are-exploited-and-how-to-protect-yourself-in-2026-319e563d3245). Cross-chain arbitrage exploits latency, sequencing, and settlement timing differences between ecosystems. Current cross-chain operations have built-in verification through bridge contracts, which naturally handles signal errors. The bridges themselves validate transactions, providing error correction. This makes cross-chain MEV an ideal initial market: high error tolerance (bridges validate), massive latency advantage relative to cross-chain settlement times (seconds vs. microseconds), and a growing profit pool.
 
-The Arbitrum Timeboost mechanism revealed a structural shift in how MEV is captured (https://docs.arbitrum.io/how-arbitrum-works/timeboost/gentle-introduction). Instead of pure speed competition, there's now an explicit auction for "express lane" priority. Our 30% latency advantage matters in two ways: detecting opportunities faster enables better auction bidding, and executing faster after winning express lane rights maximizes MEV extraction per time window. However, the auction introduces new error sensitivity: false positive signals that trigger high bids on phantom opportunities create direct losses.
+The Arbitrum Timeboost mechanism revealed a structural shift in how MEV is captured (https://docs.arbitrum.io/how-arbitrum-works/timeboost/gentle-introduction). Instead of pure speed competition, there's now an explicit auction for "express lane" priority. Latency advantages matter in two dimensions: detecting opportunities faster enables better auction bidding, and executing faster after winning express lane rights maximizes MEV extraction per time window. However, the auction introduces new precision requirements: imprecise signals that trigger bids on phantom opportunities create direct losses.
 
 ### Infrastructure & Systems
 
-Atlas uncovered critical bottlenecks in distributed AI training infrastructure that create natural markets for latency reduction. The most important finding: **GPUDirect RDMA eliminates CPU overhead in multi-GPU communication** (https://towardsdatascience.com/how-gpus-communicate/), enabling direct GPU↔NIC↔Network paths. This means inter-node GPU communication latency is now dominated by: (1) NIC processing time, (2) network propagation delay, and (3) remote NIC-to-GPU transfer. Our technology targeting propagation delay directly addresses one of the three remaining bottlenecks.
+Atlas uncovered critical bottlenecks in distributed AI training infrastructure where latency and reliability tradeoffs matter. The most important finding: **GPUDirect RDMA eliminates CPU overhead in multi-GPU communication** (https://towardsdatascience.com/how-gpus-communicate/), enabling direct GPU↔NIC↔Network paths. This means inter-node GPU communication latency is now dominated by: (1) NIC processing time, (2) network propagation delay, and (3) remote NIC-to-GPU transfer. Network propagation delay represents a fundamental bottleneck in distributed training.
 
-The Mixture-of-Experts (MoE) training architecture presents a compelling Phase 2 application (https://developer.nvidia.com/blog/optimizing-communication-for-mixture-of-experts-training-with-hybrid-expert-parallel/). MoE uses hybrid communication: intra-node NVLink (~1-2μs latency) and inter-node RDMA (~5-10μs latency). The 10x latency gap means inter-node communication is the bottleneck—exactly where we provide value. MoE expert routing creates sparse, bursty all-to-all communication patterns where tail latency dominates. A 30% reduction in inter-node RDMA latency could enable larger expert counts or finer-grained expert specialization.
+The Mixture-of-Experts (MoE) training architecture illustrates where latency constraints bind (https://developer.nvidia.com/blog/optimizing-communication-for-mixture-of-experts-training-with-hybrid-expert-parallel/). MoE uses hybrid communication: intra-node NVLink (~1-2μs latency) and inter-node RDMA (~5-10μs latency). The 10x latency gap means inter-node communication is the bottleneck. MoE expert routing creates sparse, bursty all-to-all communication patterns where tail latency dominates. Reducing inter-node RDMA latency could enable larger expert counts or finer-grained expert specialization.
 
-Production cluster monitoring provided validation for a beachhead market strategy (https://www.backend.ai/blog/2026-02-listening-to-500-plus-gpus-pulse). A 63-node, 504 B200 GPU cluster generates thousands of metrics per second where 30% faster collection enables finer-grained anomaly detection. Crucially, occasional corrupt metrics (1-5% error) are acceptable because monitoring algorithms use statistical aggregation. This is a perfect Phase 1 market: non-critical control plane operations with high error tolerance, where we can prove the technology at scale before moving to training communication.
+Production cluster monitoring reveals different reliability requirements than training (https://www.backend.ai/blog/2026-02-listening-to-500-plus-gpus-pulse). A 63-node, 504 B200 GPU cluster generates thousands of metrics per second. Monitoring algorithms use statistical aggregation, which naturally provides resilience to occasional measurement errors. This suggests that non-critical control plane operations may tolerate aggressive latency-reliability tradeoffs that training workloads cannot.
 
 ## Cross-Domain Patterns
 
 Three themes emerged consistently across domains:
 
-**Error tolerance is structurally determined by system architecture, not arbitrary.** Markets with built-in verification (cross-chain bridges, batch auction settlement, monitoring aggregation algorithms) naturally tolerate higher error rates. This suggests targeting applications where the system *already* performs validation rather than trying to add error correction ourselves.
+**Reliability requirements are structurally determined by system architecture.** Systems with built-in verification (cross-chain bridges, batch auction settlement, monitoring aggregation algorithms) can tolerate lower signal precision. This architectural observation suggests that latency-reliability tradeoffs are feasible in some domains but not others—determined by whether validation is inherent to the system design.
 
-**The value of latency reduction is regime-dependent.** In calm markets, high correlation means low innovation rate and latency matters less. During volatility, correlation breaks down, innovation spikes, and latency becomes critical. Similarly, in AI training, latency matters most for sparse communication patterns (MoE expert routing) rather than dense collectives. We need to identify regimes where latency premium is highest.
+**The value of latency varies by regime.** In calm markets, high correlation means low innovation rate and latency matters less. During volatility, correlation breaks down, innovation spikes, and latency becomes critical. Similarly, in AI training, latency matters most for sparse communication patterns (MoE expert routing) rather than dense collectives. Understanding these regimes is essential for evaluating where speed advantages create value.
 
-**Winner-take-all mechanisms amplify latency advantage.** Price-time priority markets, MEV extraction races, and GPU cluster failure detection all exhibit winner-take-all dynamics where being marginally faster captures disproportionate value. A 30% latency edge isn't just 30% more profit—it's often 100% vs. 0% due to queue position or execution priority.
+**Winner-take-all mechanisms amplify latency advantage.** Price-time priority markets, MEV extraction races, and GPU cluster failure detection all exhibit winner-take-all dynamics where being marginally faster captures disproportionate value. Small latency edges don't translate to proportional profit increases—they often determine whether you capture the opportunity at all due to queue position or execution priority.
 
 ## Open Questions
 
-**Finite-blocklength theory:** We need empirical measurements of channel dispersion V for typical financial market signals and AI training gradients. This will tell us the actual rate penalty for 30% blocklength reduction and what error rates are theoretically required to compensate.
+**Finite-blocklength theory:** We need empirical measurements of channel dispersion V for typical financial market signals and AI training gradients. This will characterize the actual rate penalty for latency-constrained transmission and the theoretical bounds on reliability.
 
-**Innovation rate dynamics:** For order book updates and expert routing decisions, what is H(X_t | X_{t-τ}) as a function of τ? If it's linear, our 30% latency reduction yields 30% less information to transmit. If sublinear, the advantage compounds.
+**Innovation rate dynamics:** For order book updates and expert routing decisions, what is H(X_t | X_{t-τ}) as a function of τ? Understanding how information content scales with latency will reveal which signals benefit most from faster transmission.
 
-**Error cost quantification:** What is the expected adverse selection cost per erroneous order in typical markets? For AI training, what is the convergence impact of 0.1-1% gradient corruption? These numbers will determine viable operating regimes.
+**Precision cost quantification:** What is the expected adverse selection cost per imprecise signal in typical markets? For AI training, what is the convergence impact of gradient noise at different levels? These numbers will determine where latency-reliability tradeoffs are economically viable.
 
-**Infrastructure economics:** At what cluster scale does 30% faster monitoring or training communication justify the cost and complexity of dual-channel architecture? Is the ROI positive at 100 GPUs, or do we need 1000+?
+**Infrastructure economics:** At what scale does faster but less reliable communication justify the cost and complexity? Is the ROI positive at 100 GPUs, or do we need 1000+? What are the switching costs from incumbent solutions?
 
 ## Methodological Notes
 
